# vhdx-forensic

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_vhdx.rs
src/: bat.rs  error.rs  header.rs  integrity.rs  lib.rs  metadata.rs  reader.rs  region.rs  repair.rs
tests/: api_tests.rs  builder.rs  integrity_tests.rs  libvhdi_compat.rs  repair_tests.rs  robustness_tests.rs  vhdx_tests.rs
