[package]
name = "vhdx-forensic"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Pure-Rust read-only VHDX container reader — CONTAINER layer for forensic use"
license = "Apache-2.0"
repository = "https://github.com/h4x0r/vhdx-forensic"

[dependencies]
thiserror = "2"
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
