[package]
name = "vhdx-forensic"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Pure-Rust read-only VHDX container reader for forensic analysis"
license = "MIT"
repository = "https://github.com/SecurityRonin/vhdx-forensic"
homepage = "https://github.com/SecurityRonin/vhdx-forensic"
documentation = "https://docs.rs/vhdx-forensic"
readme = "README.md"
keywords = ["forensics", "vhdx", "disk-image", "windows", "container"]
categories = ["parser-implementations", "filesystem"]

[dependencies]
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
