[package]
name = "vhdx-forensic"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Pure-Rust read-only VHDX container reader for forensic analysis"
license = "MIT"
repository = "https://github.com/SecurityRonin/vhdx-forensic"
homepage = "https://github.com/SecurityRonin/vhdx-forensic"
documentation = "https://docs.rs/vhdx-forensic"
readme = "README.md"
keywords = ["forensics", "vhdx", "disk-image", "windows", "container"]
categories = ["parser-implementations", "filesystem"]

[dependencies]
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
return_self_not_must_use = "allow"
doc_markdown = "allow"
too_many_lines = "allow"
manual_div_ceil = "allow"
redundant_closure_for_method_calls = "allow"
match_same_arms = "allow"
manual_let_else = "allow"
cast_lossless = "allow"
if_not_else = "allow"
manual_range_contains = "allow"

[lints.rust]
dead_code = "allow"
